Mon Dec 14 11:41:59 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/cgi.rb: fix a typo in documentation.
	  [ci skip][fix GH-1140] Patch by @jutaz

Mon Dec 14 11:31:00 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* compile.c: fix typos.
	  [ci skip][fix GH-1140] Patch by @jutaz
	* dir.c: ditto.
	* gc.c: ditto.
	* io.c: ditto.
	* node.h: ditto.
	* thread_pthread.c: ditto.
	* vm_insnhelper.c: ditto.
	* vsnprintf.c: ditto.

Mon Dec 14 11:27:01 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* enc/iso_2022_jp.h: fix typos.
	  [ci skip][fix GH-1140] Patch by @jutaz
	* enc/utf_16_32.h: ditto.
	* enc/utf_7.h: ditto.

Mon Dec 14 11:25:57 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* benchmark/bm_app_aobench.rb: fix typos.
	  [ci skip][fix GH-1140] Patch by @jutaz
	* benchmark/bm_vm_thread_pipe.rb: ditto.

Sun Dec 13 23:46:10 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (trace_lex_state): trace lex_state changes if yydebug is
	  set, and send the messages to rb_stdout.

	* parse.y (rb_parser_printf): store YYPRINTF messages per lines
	  so that lex_state traces do not mix.

	* tool/ytab.sed: add parser argument to yy_stack_print too.

Sun Dec 13 20:41:16 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (build_lex_state_name, trace_lex_state): lex_state is
	  now bit flags and can be set 2 bits or more.

Sun Dec 13 20:26:30 2015  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* test/ruby/test_syntax.rb: fix typo in test

Sun Dec 13 20:12:14 2015  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* parse.y (parse_percent): Allow %-literals in labeled arg as
	  r51624 did for parentheses.
	  Fixes [ruby-core:72084] [Bug #11812].

Sun Dec 13 20:02:15 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ChangeLog: fix a typo

Sun Dec 13 19:54:26 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/lib/envutil.rb: move envutil's assertions under Test::Unit::Assertion.
	* test/lib/test/unit/assertions.rb: ditto.

Sun Dec 13 19:24:20 2015  Yuki Yugui Sonoda  <yugui@yugui.jp>
