@@ -4527,7 +4527,7 @@ rb_str_sub_bang(int argc, VALUE *argv, VALUE str)
  *  additional backslash. However, within +replacement+ the special match
  *  variables, such as <code>&$</code>, will not refer to the current match.
  *  If +replacement+ is a String that looks like a pattern's capture group but
- *  is actaully not a pattern capture group e.g. <code>"\\'"</code>, then it
+ *  is actually not a pattern capture group e.g. <code>"\\'"</code>, then it
  *  will have to be preceded by two backslashes like so <code>"\\\\'"</code>.
  *
  *  If the second argument is a Hash, and the matched text is one of its keys,
